--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
