--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
+    "daterangepicker": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
@@ -21,6 +22,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.3.2",
     "recharts": "^2.1.6",
     "tailwind-scrollbar-hide": "^1.1.5",
     "web-vitals": "^1.0.1",
