--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daterangepicker": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.1",
