--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "247-admin",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@hookform/resolvers": "^2.8.3",
@@ -18,6 +22,7 @@
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.1",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-router": "^5.2.1",
