--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.3.2",
     "recharts": "^2.1.6",
+    "socket.io-client": "^4.5.1",
     "tailwind-scrollbar-hide": "^1.1.5",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
