--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.18.1",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
